--- a/index.htm
+++ b/index.htm
@@ -162,15 +162,15 @@
             <div class="interface">
                 <h2 class="titulo">MEU <span>PORTFÓLIO.</span></h2>
                 <div class="flex">
-                    <div class="img-port" style="background-image: url(images/img_aleatoria.png);">
-                        <div class="overlay">Projeto 1</div>
+                    <div class="img-port" style="background-image: url(images/DesignHtml.png);">
+                        <div class="overlay">HTML</div>
                     </div>
-                    <div class="img-port" style="background-image: url(images/img_aleatoria.png);">
-                        <div class="overlay">Projeto 2</div>
+                    <div class="img-port" style="background-image: url(images/Android.png);">
+                        <div class="overlay">Android</div>
                     </div>
-                    <div class="img-port" style="background-image: url(images/img_aleatoria.png);">
+                    <!-- <div class="img-port" style="background-image: url(images/img_aleatoria.png);">
                         <div class="overlay">Projeto 3</div>
-                    </div>
+                    </div> -->
                 </div><!--flex-->
             </div><!--interface-->
         </section><!--portfolio-->
